# OpenGL2

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  imgui.ini  run.sh
assets/models/robot/: Model.mtl  mp_ftl_2_1_hands_t.tga  mp_ftl_3_1_feet_t.tga  mp_ftl_3_1_mask_t.tga
assets/shaders/: Fragment.glsl  TestShader.frag.glsl  TestTexture.frag.glsl  Vertex.glsl
assets/shaders/TestBlending/: TestBlending.frag.glsl
assets/shaders/TestCamera/: TestCamera.frag.glsl
assets/shaders/TestDepth/: TestDepth.frag.glsl  TestDepth.vert.glsl
assets/shaders/TestFramebuffer/: BlackAndWhite.frag.glsl  Blur.frag.glsl  Edges.frag.glsl  Grayscale.frag.glsl  Inverse.frag.glsl  Scene.frag.glsl  Scene.vert.glsl  Screen.frag.glsl  Screen.vert.glsl  Sharpen.frag.glsl
assets/shaders/TestLighting/: Gouraud.frag.glsl  Gouraud.vert.glsl  Light.frag.glsl  Light.vert.glsl  Object.frag.glsl  Object.vert.glsl  Phong.frag.glsl  TestLighting.vert.glsl
assets/shaders/TestMVP/: TestMVP.vert.glsl
assets/shaders/TestModel/: TestModel.frag.glsl
assets/shaders/TestShader/: TestShader.frag.glsl  TestShader.vert.glsl
assets/shaders/TestStencil/: SolidColor.frag.glsl  TestStencil.frag.glsl
assets/shaders/TestTexture2D/: TestTexture2D.frag.glsl  TestTexture2D.vert.glsl
assets/shaders/TestTransform2D/: TestTransform2D.frag.glsl  TestTransform2D.vert.glsl
assets/shaders/snippets/: Bezier.glsl  BlinnWyvilCosApprox.glsl  CircularArcThroughPoint.glsl  CircularEasings.glsl  CircularElliptical.glsl  CircularEllipticalBase.glsl  CircularFillet.glsl  Constants.glsl  Easings.glsl  Exponential.glsl  ExponentialBase.glsl  ExponentialEasings.glsl  HSV.glsl  Identities.glsl  Impulses.glsl  Polynomial.glsl  PolynomialBase.glsl  PolynomialEasings.glsl  Pows.glsl  PulsesBumpsSteps.glsl  SinEasings.glsl  Sq.glsl  UnitaryRemappings.glsl
src/: Application.cpp  Camera.cpp  Camera.hpp  EBO.cpp  EBO.hpp  EBO.inl  FBO.cpp  FBO.hpp  Format.hpp  GLFWRAII.cpp  GLFWRAII.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  RBO.cpp  RBO.hpp  Renderer.cpp  Renderer.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture.cpp  Texture.hpp  VAO.cpp  VAO.hpp  VBLayout.cpp  VBLayout.hpp  VBO.cpp  VBO.hpp  VBO.inl
src/test/: Test.cpp  Test.hpp  Test.inl  TestBlending.cpp  TestBlending.hpp  TestCamera.cpp  TestCamera.hpp  TestClearColor.cpp  TestClearColor.hpp  TestDepth.cpp  TestDepth.hpp  TestFaceCulling.cpp  TestFaceCulling.hpp  TestFramebuffer.cpp  TestFramebuffer.hpp  TestLighting.cpp  TestLighting.hpp  TestMVP.cpp  TestMVP.hpp  TestModel.cpp  TestModel.hpp  TestShader.cpp  TestShader.hpp  TestStencil.cpp  TestStencil.hpp  TestTexture.cpp  TestTexture.hpp  TestTexture2D.cpp  TestTexture2D.hpp  TestTransform.cpp  TestTransform.hpp  TestTransform2D.cpp  TestTransform2D.hpp
